--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+apply from: "${project.rootDir}/QA/quality.gradle"
+
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
