Sync adapter now starts every time a model is changed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.kodelabs.mycosts"
+<manifest
+    package="com.kodelabs.mycosts"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 
     <application
         android:name=".AndroidApplication"
@@ -34,6 +41,36 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.kodelabs.mycosts.presentation.ui.activities.MainActivity" />
         </activity>
+
+
+        <!-- Sync service section -->
+        <service
+            android:name=".sync.auth.AuthenticatorService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+        <service
+            android:name=".sync.SyncService"
+            android:exported="false"
+            android:process=":sync">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter" />
+        </service>
+
+        <provider
+            android:name=".storage.contentprovider.StubProvider"
+            android:authorities="@string/stub_content_authority"
+            android:exported="false"
+            android:syncable="true" />
     </application>
 
 </manifest>
