--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,11 +33,14 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.jakewharton.timber:timber:4.1.0'
 
-    //network
+    // inspection
+    compile 'com.facebook.stetho:stetho:1.3.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.0'
+
+    // network
     compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
     compile 'com.squareup.retrofit2:converter-gson:+'
     compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
-
 
     // database
     apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
