--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha8'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,8 +17,9 @@ allprojects {
     repositories {
         jcenter()
         maven {
-            url "https://jitpack.io"
+            url "https://maven.google.com"
         }
+        maven { url "https://jitpack.io" }
     }
 }
 
